Wed Jan  2 12:30:01 2002  Chris Gill  <cdgill@cs.wustl.edu>

	* ace/RB_Tree.i
	* tests/RB_Tree_Test.cpp : added check for valid current node to
          forward_i and reverse_i methods of iterator base class.  Thanks to
          Craig L. Ching <cching@mqsoftware.com> for reporting this!

Wed Jan  2 08:19:18 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/README: Clarify that run_test.pl should be used rather
	  the run_tests.sh.
  
	* tests/run_tests.bat: Clarify that run_test.pl should be used
	  on Win9x.  Thanks to Edward A Thompson <ed4becky_2000@yahoo.com>
 	  for prompting this.

Wed Jan  2 07:37:01 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Handle_Set.h: 
	* ace/Handle_Set.cpp: Added a method reset_state () to the
	  ACE_Handle_Set_Iterator class. 

Tue Jan  2 11:39:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/OS.i:
          Added missing ACE_UNUSED_ARG in ACE_OS::event_timedwait

Tue Jan  1 15:36:39 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU: Added support
          for the buildbits=64 make option.

Tue Jan  1 20:05:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Name_Request_Reply.{h,cpp}:
          Changed type of 3 constructor arguments from size_t to ACE_UINT32
          because the members in which these arguments are stored are also
          of type ACE_UINT32

        * ace/OS.i
          In ACE_OS::umask method, changed the type in the ACE_OSCALL_RETURN
          macro from int to mode_t because that is the return type of the
          method

Tue Jan  1 08:47:25 2002  Douglas C. Schmidt  <schmidt@siesta.cs.wustl.edu>

	* ace/Thread.h: Clarify how the ACE_Thread_Adapter is deleted
	  when spawn() is called.  Thanks to Preston Elder
 	  <prez@srealm.net.au> for reporting this confusion.

Tue Jan  1 14:09:26 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * examples/Map_Manager/test_hash_map_manager.cpp: