@@ -229,13 +229,19 @@ public:
                         int encode = 1);
 
   /**
+   * Set the host name without effecting the port number.
+   */
+  int set_host_name (const char host_name[],
+                     int address_family = AF_UNSPEC);
+
+  /**
    * Sets the address without affecting the port number.  If
    * <encode> is enabled then <ip_addr> is converted into network
    * byte order, otherwise it is assumed to be in network byte order
    * already and are passed straight through.  The size of the address
    * is specified in the <len> parameter.
    */
-  int set_address (const char *ip_addr,
+  int set_address (const void *ip_addr,
                    int len,
                    int encode = 1);
 
