@@ -1,3 +1,11 @@
+Wed Jan  2 12:43:00 2002  John Aughey  <jha@aughey.com>
+
+	* ace/INET_Addr.h
+	* ace/INET_Addr.cpp : Added set_host_name method and moved
+	  relevant code into this method.  Changed signature of
+	  set_address method to take a void pointer rather than a
+	  char *.
+
 Wed Jan  2 12:30:01 2002  Chris Gill  <cdgill@cs.wustl.edu>
 
 	* ace/RB_Tree.i
